--- a/main.css
+++ b/main.css
@@ -140,10 +140,10 @@
 
 /* this is Creative-Before strat */
 .creative-before{
-  @apply bg-white flex flex-row gap-28 justify-around items-center w-full p-16 px-36;
+  @apply bg-white flex lg:flex-row flex-col lg:gap-28 md:gap-12 gap-8 justify-around md:items-center w-full md:p-16 p-6 lg:px-36 md:px-8 md:-mt-20;
 }
 .c-b-div{
-  @apply flex flex-col p-6 relative w-2/3 h-full scale-110 hover:scale-125 hover:contrast-200 transition-all duration-500 hover:shadow-xl hover:-mt-24 hover:cursor-progress;
+  @apply flex flex-col p-6 py-12 relative md:w-2/3 h-full scale-110 hover:scale-105 hover:contrast-200 transition-all duration-500 hover:shadow-xl lg:hover:-mt-24 md:hover:scale-125 md:hover:cursor-progress;
 }
 .c-b-logo {
   @apply w-fit;
@@ -158,3 +158,42 @@
   @apply absolute h-full right-0 top-0 scale-125;
 }
 /* this is Creative-Before end */
+
+/* this is Creative-after start */
+.creative-after{
+  @apply md:px-16 px-10 md:py-24 py-16;
+}
+.c-a-div-2{
+  @apply grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-6 md:px-10 px-4;
+}
+.c-a-card{
+  @apply relative flex flex-col justify-center items-center w-full h-full;
+}
+.c-a-card-div{
+  @apply flex flex-col justify-center items-center bg-white rounded-lg px-10 py-8 w-full h-full shadow-xl hover:bg-[#F44335] hover:scale-110 transition-all duration-700;
+}
+.c-a-card-logo{
+  @apply c-a-img scale-75 rounded-full hover:border-2 hover:shadow-2xl hover:border-white;
+}
+.c-a-img{
+  @apply w-fit hover:cursor-pointer;
+}
+.c-a-div-1{
+  @apply flex flex-row md:pb-0 pb-4;
+}
+.c-a-text{
+  @apply md:text-3xl text-2xl font-semibold;
+}
+.c-a-text-1{
+  @apply text-lg font-bold;
+}
+.c-a-text-2{
+  @apply text-[12px] text-[#000000];
+}
+.c-a-bg-1{
+  @apply absolute bottom-0 left-0 -mb-16 -ms-10 -z-10;
+}
+.c-a-bg-2{
+  @apply absolute top-0 right-0 -mt-16 -me-10 -z-10;
+}
+/* this is Creative-after end */
