--- a/main.css
+++ b/main.css
@@ -139,61 +139,91 @@
 /* this is about-section end*/
 
 /* this is Creative-Before strat */
-.creative-before{
+.creative-before {
   @apply bg-white flex lg:flex-row flex-col lg:gap-28 md:gap-12 gap-8 justify-around md:items-center w-full md:p-16 p-6 lg:px-36 md:px-8 md:-mt-20;
 }
-.c-b-div{
+.c-b-div {
   @apply flex flex-col p-6 py-12 relative md:w-2/3 h-full scale-110 hover:scale-105 hover:contrast-200 transition-all duration-500 hover:shadow-xl lg:hover:-mt-24 md:hover:scale-125 md:hover:cursor-progress;
 }
 .c-b-logo {
   @apply w-fit;
 }
-.c-b-text-1{
+.c-b-text-1 {
   @apply text-xl font-bold;
 }
-.c-b-text-2{
+.c-b-text-2 {
   @apply text-[12px] text-[#757095] pt-1;
 }
-.c-b-bg{
+.c-b-bg {
   @apply absolute h-full right-0 top-0 scale-125;
 }
 /* this is Creative-Before end */
 
 /* this is Creative-after start */
-.creative-after{
-  @apply md:px-16 px-10 md:py-24 py-16;
+.creative-after {
+  @apply bg-white md:px-16 px-10 md:py-24 py-16;
 }
-.c-a-div-2{
+.c-a-div-2 {
   @apply grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-6 md:px-10 px-4;
 }
-.c-a-card{
+.c-a-card {
   @apply relative flex flex-col justify-center items-center w-full h-full;
 }
-.c-a-card-div{
+.c-a-card-div {
   @apply flex flex-col justify-center items-center bg-white rounded-lg px-10 py-8 w-full h-full shadow-xl hover:bg-[#F44335] hover:scale-110 transition-all duration-700;
 }
-.c-a-card-logo{
+.c-a-card-logo {
   @apply c-a-img scale-75 rounded-full hover:border-2 hover:shadow-2xl hover:border-white;
 }
-.c-a-img{
+.c-a-img {
   @apply w-fit hover:cursor-pointer;
 }
-.c-a-div-1{
+.c-a-div-1 {
   @apply flex flex-row md:pb-0 pb-4;
 }
-.c-a-text{
+.c-a-text {
   @apply md:text-3xl text-2xl font-semibold;
 }
-.c-a-text-1{
+.c-a-text-1 {
   @apply text-lg font-bold;
 }
-.c-a-text-2{
+.c-a-text-2 {
   @apply text-[12px] text-[#000000];
 }
-.c-a-bg-1{
+.c-a-bg-1 {
   @apply absolute bottom-0 left-0 -mb-16 -ms-10 -z-10;
 }
-.c-a-bg-2{
+.c-a-bg-2 {
   @apply absolute top-0 right-0 -mt-16 -me-10 -z-10;
 }
 /* this is Creative-after end */
+
+/* this is Footer-Section start */
+.footer-section {
+  @apply bg-white flex flex-col divide-y-2 text-[#20484F];
+}
+.footer-section-div-grid {
+  @apply grid md:grid-cols-6 justify-center md:ps-8 md:pe-0 px-1 py-6;
+}
+.footer-section-div-1 {
+  @apply grid md:col-span-2 col-span-4 w-full 2xl:ps-24 xl:ps-3;
+}
+.foot-s-div-1-head {
+  @apply flex justify-start;
+}
+.foot-s-div-1-bottom {
+  @apply flex justify-between md:gap-2 gap-4 md:flex-col flex-row w-full md:text-[12px] text-[10px] md:ps-4;
+}
+.footer-section-div-2 {
+  @apply grid md:grid-cols-4 grid-cols-2 col-span-4 gap-4;
+}
+.foot-s-div-2-flexs {
+  @apply md:text-[12px] text-[10px] h-full flex flex-col md:gap-4 gap-2 pt-3 md:ps-0 ps-5;
+}
+.foot-s-div-2-head {
+  @apply font-bold 2xl:text-[20px] xl:text-[18px] text-[13px];
+}
+.footer-section-copyright {
+  @apply md:text-[12px] text-[10px] text-center py-1;
+}
+/* this is Footer-Section end */
