--- a/main.css
+++ b/main.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
+body {
+  @apply font-custom;
+}
 .respScreen {
   @apply container mx-auto;
 }
@@ -140,10 +145,10 @@
 
 /* this is Creative-Before strat */
 .creative-before {
-  @apply bg-white flex lg:flex-row flex-col lg:gap-28 md:gap-12 gap-8 justify-around md:items-center w-full md:p-16 p-6 lg:px-36 md:px-8 md:-mt-20;
+  @apply bg-white flex lg:flex-row flex-col lg:gap-28 md:gap-12 gap-8 justify-around md:items-center w-full md:p-16 p-6 lg:px-36 md:px-8 md:-mt-20 mt-12;
 }
 .c-b-div {
-  @apply flex flex-col p-6 py-12 relative md:w-2/3 h-full scale-110 hover:scale-105 hover:contrast-200 transition-all duration-500 hover:shadow-xl lg:hover:-mt-24 md:hover:scale-125 md:hover:cursor-progress;
+  @apply flex flex-col p-6 py-12 relative md:w-2/3 h-full md:scale-110 hover:scale-105 hover:contrast-200 transition-all duration-500 hover:shadow-xl lg:hover:-mt-24 md:hover:scale-125 md:hover:cursor-progress scale-90;
 }
 .c-b-logo {
   @apply w-fit;
@@ -167,10 +172,10 @@
   @apply grid lg:grid-cols-4 md:grid-cols-2 grid-cols-1 gap-6 md:px-10 px-4;
 }
 .c-a-card {
-  @apply relative flex flex-col justify-center items-center w-full h-full;
+  @apply relative flex flex-col justify-center items-center w-full h-full mb-4 hover:mb-0;
 }
 .c-a-card-div {
-  @apply flex flex-col justify-center items-center bg-white rounded-lg px-10 py-8 w-full h-full shadow-xl hover:bg-[#F44335] hover:scale-110 transition-all duration-700;
+  @apply flex flex-col gap-1 justify-center items-center bg-white rounded-lg px-10 py-8 w-full h-full shadow-xl hover:bg-[#F44335] hover:scale-110 transition-all duration-700;
 }
 .c-a-card-logo {
   @apply c-a-img scale-75 rounded-full hover:border-2 hover:shadow-2xl hover:border-white;
@@ -212,7 +217,7 @@
   @apply flex justify-start;
 }
 .foot-s-div-1-bottom {
-  @apply flex justify-between md:gap-2 gap-4 md:flex-col flex-row w-full md:text-[12px] text-[10px] md:ps-4;
+  @apply flex justify-between md:gap-2 gap-4 md:flex-col flex-row w-full md:text-[12px] text-[9px] md:ps-4;
 }
 .footer-section-div-2 {
   @apply grid md:grid-cols-4 grid-cols-2 col-span-4 gap-4;
